--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,16 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES
 #        ufl_bd.cpp
 #        xbcutstk.cxx
-        ufl_solve.cpp
-        branching.h ufl_model.h rounding_heu.h benders_cut.h local_branching.h local_branching.cpp branching.cpp ufl_model.cpp rounding_heu.cpp benders_cut.cpp branch_cut.h branch_cut.cpp branch_cut_lb.h branch_cut_lb.cpp benders_cut_inout.h benders_cut_inout.cpp)
+        ufl_bc_bd.cpp
+#        branching.h
+#        rounding_heu.h
+#        benders_cut.h
+#        local_branching.h local_branching.cpp
+#        branching.cpp
+#        rounding_heu.cpp
+#        benders_cut.cpp
+#        branch_cut.h branch_cut.cpp branch_cut_lb.h branch_cut_lb.cpp benders_cut_inout.h benders_cut_inout.cpp
+        )
 
 set(XPRESS_INC_DIR /opt/xpressmp/include)
 set(XPRESS_LINK_DIR /opt/xpressmp/lib)
